syntax = 'proto2';
package raft;
option cc_generic_services = true;

message ClientRequest {
    required string   msg  = 1; 
};

message ClientResponse {
    required int32	err_code   = 1;  
	required string des		   = 2;  
	optional string leader_ip  = 3;
};

service ClientService {

    rpc client_msg(ClientRequest) returns (ClientResponse);
};